`Updated SVM_Kernels.ipynb and Support_Vector_Classifiers.ipynb to reflect changes in execution counts and added accuracy scores for different kernels. Updated requirements.txt to include nbformat>=4.2.0.`

--- a/algorithms/support vector machines/Support_Vector_Classifiers.ipynb
+++ b/algorithms/support vector machines/Support_Vector_Classifiers.ipynb
@@ -714,13 +714,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "5bdd7cc7",
    "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = svc.predict(X_test)\n",
-    "from sklearn.metrics import classification_report, confusion_matrix"
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score"
    ]
   },
   {
