"Updated Support Vector Regression notebook with corrected execution count and added comment."

--- a/algorithms/support vector machines/Support_Vector_Regression.ipynb
+++ b/algorithms/support vector machines/Support_Vector_Regression.ipynb
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "20223963",
    "metadata": {},
    "outputs": [
@@ -2105,7 +2105,8 @@
    "source": [
     "from sklearn.metrics import r2_score, mean_absolute_error\n",
     "print(r2_score(y_test, grid_prediction))\n",
-    "print(mean_absolute_error(y_test, grid_prediction))"
+    "print(mean_absolute_error(y_test, grid_prediction))\n",
+    "#  This is support vector regression"
    ]
   },
   {
