--- a/algorithms/support vector machines/Support_Vector_Regression.ipynb
+++ b/algorithms/support vector machines/Support_Vector_Regression.ipynb
@@ -2105,8 +2105,7 @@
    "source": [
     "from sklearn.metrics import r2_score, mean_absolute_error\n",
     "print(r2_score(y_test, grid_prediction))\n",
-    "print(mean_absolute_error(y_test, grid_prediction))\n",
-    "#  This is support vector regression"
+    "print(mean_absolute_error(y_test, grid_prediction))"
    ]
   },
   {
